--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -4,7 +4,6 @@
 		
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
-		<!--meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0"-->
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" type="text/css" href="css/base.css">
@@ -17,10 +16,11 @@
 
 		
 			body { width:100%; height:100%; overflow: hidden;}
-			#content {position:absolute; z-index:0; bottom:0; left:0; width:100%; height:auto;}					
+			/*#content {position:absolute; z-index:0; bottom:0; left:0; width:100%; height:auto;}*/					
 			#menu, #datacontent, #datatrending { position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;}
 			#menu, #datacontent, #datatrending {top:100px;}
 
+			
 			
 			
 			.scroller {position:absolute; z-index:1; -webkit-tap-highlight-color:rgba(0,0,0,0); width:100%; padding:0;}
@@ -280,6 +280,17 @@
 			</div>
 		</div>
 		
+		
+		<div id="miForm" class="page" style="display:block; z-index:10; top:100px; background-color: #ffffff;">				
+			<form id="yoinformo">
+				<select id="numero">
+					<option id="1">Uno</option>
+					<option id="2">Dos</option>
+				</select>
+				<br />
+				<input type="text"  />
+			</form>
+		</div>
 		
 		
 
