--- a/NoticiasTVN/NoticiasTVN/platforms/android_premium/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android_premium/assets/www/index_tvn.html
@@ -15,11 +15,12 @@
 		<style type="text/css" media="all">
 
 		
-			body {position: fixed; width:100%; height:100%; overflow: hidden;}
-			#content {position:absolute; z-index:0; bottom:0; left:0; width:100%; height:auto;}					
+			body {width:100%; height:100%; overflow: hidden;}
+			/*#content {position:absolute; z-index:0; bottom:0; left:0; width:100%; height:auto;}*/					
 			#menu, #datacontent, #datatrending { position:absolute; z-index:1; top:0px; bottom:0; left:0; width:100%; overflow:auto;}
 			#menu, #datacontent, #datatrending {top:100px;}
 
+			
 			
 			
 			.scroller {position:absolute; z-index:1; -webkit-tap-highlight-color:rgba(0,0,0,0); width:100%; padding:0;}
@@ -117,6 +118,7 @@
 				padding: 0;
 				margin-top: -75px; 
 			   	margin-left: -75px; 
+			   	
 			}
 			
 			#splash {				
@@ -180,8 +182,12 @@
 			
 		
 			button {padding:10px;  background:#ccc;  border: 2px solid #AAAAAA; width: 50%;  display: block; margin: 0 auto; font-weight:bold }		
-			button:hover {background:#333333; color: #ffffff;}
+			/*button:hover {background:#333333; color: #ffffff;}*/
 		
+			/*button#send-yo-informo { background:#5cb85c;}*/
+			button#get-photo { background:#d9534f;}
+			button#get-photo.ok { background:#398439;}
+			
 			
 		</style>
 	</head>
@@ -274,6 +280,11 @@
 			</div>
 		</div>
 		
+		
+		<div id="miForm" class="page hidden" style="display:block; z-index:1; top:100px; background-color: #ffffff;">				
+			<div id="yoinformo">								
+			</div>
+		</div>
 		
 		
 
