--- a/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
+++ b/NoticiasTVN/NoticiasTVN/platforms/android/assets/www/index_tvn.html
@@ -181,8 +181,21 @@
 			select{width:100%; border: 0;}
 			
 		
-			button {padding:10px;  background:#ccc;  border: 2px solid #AAAAAA; width: 50%;  display: block; margin: 0 auto; font-weight:bold }		
+			button {padding:10px;  background:#ccc;  border: 2px solid #AAAAAA; width: 37%;  display: block; margin: 0 auto; font-weight:bold }		
 			/*button:hover {background:#333333; color: #ffffff;}*/
+			
+			.back_button{
+				display: inline-block; 
+				position: relative;
+				margin-left:10%;
+				float:left;
+			}
+			.next_button{
+				display: inline-block; 
+				position: relative;
+				margin-right:10%;
+				float:right;
+			}
 		
 			/*button#send-yo-informo { background:#5cb85c;}*/
 			button#get-photo { background:#d9534f;}
@@ -281,8 +294,8 @@
 		</div>
 		
 		
-		<div id="miForm" class="page hidden" style="display:block; z-index:1; top:100px; background-color: #ffffff;">				
-			<div id="yoinformo">								
+		<div id="miForm" class="page hidden" style="display:block; z-index:1; top:10%; height:100%; background-color: #ffffff;">				
+			<div id="yoinformo" style="width:100%; height:100%; background-color: #ffffff;">								
 			</div>
 		</div>
 		
