--- a/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/polla.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/android/assets/www/polla.html
@@ -13,7 +13,7 @@
 		<script type="text/javascript" src="js/polla.js"></script>
 		
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-
+		<link rel="stylesheet" href="css/animate.min.css">
 
 
 		<script type="text/javascript">
@@ -22,7 +22,17 @@
 		
 		function loaded () {
 			myScroll = new IScroll('#wrapper');
-			myScroll.on('beforeScrollStart', function () { this.refresh(); });
+			myScroll.on('beforeScrollStart', function () { 
+				this.refresh();
+				$('.group').removeClass('animated bounceIn');
+			});
+			
+			myScroll.on('scrollStart', function () { 				
+				$('.goal').removeClass('gol');
+				$('.add, .sub').addClass('hidden');
+			});
+			
+			
 		}
 		
 		document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
@@ -44,6 +54,9 @@
 			padding: 0;
 			margin: 0;
 			border: 0;
+			width: 100%;
+			height: 100%;
+			
 		}
 		
 		body {
@@ -56,7 +69,7 @@
 			position: absolute;
 			z-index: 1;
 			top: 45px;
-			bottom: 45px;
+			bottom: 0;
 			left: 0;
 			width: 100%;
 			background: #ccc;
@@ -87,6 +100,7 @@
 		
 		
 		header {
+			
 			position: absolute;
 			z-index: 2;
 			top: 0;
@@ -103,7 +117,7 @@
 		}
 		
 		footer {
-			position: absolute;
+			/*position: absolute;
 			z-index: 2;
 			bottom: 0;
 			left: 0;
@@ -111,15 +125,28 @@
 			height: 45px;
 			background: #444;
 			padding: 0;
-			border-top: 1px solid #444;
+			border-top: 1px solid #444;*/
 		}
 				
-		.row.venue div { background:#ffffff; text-align:center; }
-		.flag {width: 67px; height: 45px;}
-		/*.hidden {display:none;}*/
-
+		.hidden {display:none;}
 		figure {text-align: center; margin: 0 auto; padding: 5px;}
-		figcaption {text-align: center;}
+		figure img {width: 67px; height: 45px;}
+		figcaption {text-align: center; line-height:20px;}
+		
+		.goal {text-align: center; line-height:75px;  font-size: 1.4em; font-weight: bold;}
+		.row.venue div { background:#ffffff; text-align:center; }
+		span {font-size: 0.9em;}
+
+		h3 {text-align: center; font-size: 1.6em; padding: 0; margin: 0; text-transform: uppercase;}
+
+		#splash-block {display: block; position: absolute; top: 0; left: 0; z-index: 4; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); }
+		
+		.gol {position: absolute;  width:100%; top:-20px; background-color: yellow; z-index: 10; overflow-y: visible; }
+
+		.add, .sub { display: block; line-height:30px; font-size:1.6em; font-weight: bold;   }
+		.add { color: green;  }
+		.sub { color: blue; }
+		
 
 		</style>
 		
@@ -133,8 +160,15 @@
 
 		
 		<header>
-			
+			<span class="back hidden">VOLVER</span>
 		</header>
+		
+		<div id="splash-block " class="hidden">			
+			
+						
+		</div>	
+		
+		
 		
 		<div id="wrapper">
 			<div id="scroller">				
