--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/home.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/home.html
@@ -2,21 +2,38 @@
 <html lang="es">
 	<body>
 	
-		<div id="wrapper" style="padding-right: 2px;">
+		<div id="wrapper">
 			<div class="scroller">				
-				<div class="container" >
+				<div class="container">
 				</div>	
 			</div>
 		</div>	
 
+		<div id="wrapper2" class="page" style="left: 100%;">
+			<div class="scroller">							
+				<div class="container" >
+				</div>
+			</div>			
+		</div>
+
 		<script type="text/javascript">
-			//$("header").removeClass('hidden');
+		
 			$('header .container .row .menu span').addClass('icon-menuhome');
+			
 			var myScroll = new IScroll('#wrapper',{click:true,preventDefault:true});
-			myScroll.on('beforeScrollStart', function () { 
+			myScroll.on('beforeScrollStart', function () {
 				this.refresh();	
 			});	
+			
+			var myScroll2 = new IScroll('#wrapper2',{click:true,preventDefault:true});
+			myScroll2.on('beforeScrollStart', function () { 
+				this.refresh();			
+			});
+
+			
 			gaPlugin.trackPage(successGAHandler, errorGAHandler, "Home");
+			
+
 		</script>
 
 		<script type="text/javascript" src="js/homeV2.js"></script>  
