--- a/TVMaxPolla/TVMaxPolla/platforms/ios/www/index.html
+++ b/TVMaxPolla/TVMaxPolla/platforms/ios/www/index.html
@@ -35,7 +35,7 @@
 						</div>
 						
 						<div style="display:inline; float: left; width:64px; height: 50px; line-height: 50px;" class="logo" >						
-							<img src="img/logo.svg" style="width:100%; height: auto;"> 	
+							<img src="img/logo.svg" onerror="this.src='img/logo.png'" style="width:100%; height: auto;"> 	
 						</div>
 						
 						<div style="display:inline; float: left;  height: 50px; margin-left: 15px; text-align: left; overflow:hidden; white-space:nowrap; text-overflow: ellipsis; font-size:1.4em;" class="title animated">
